correct past ships

--- a/seaBattle.html
+++ b/seaBattle.html
@@ -20,6 +20,10 @@
             <div class="field field2"></div>
         </div>
     </div>
+    <div class="btn-ready">
+        <button class="ready" id="buttonReady">I'm ready</button>
+        <div class="error-text-empty-field"></div>
+    </div>
 
 
 </div>
