--- a/seaBattle.html
+++ b/seaBattle.html
@@ -24,6 +24,9 @@
         <button class="ready" id="buttonReady">I'm ready</button>
         <div class="error-text-empty-field"></div>
     </div>
+    <div class="btn-startGame">
+        <button class="startGame" id="buttonStartGame" hidden>Start game</button>
+    </div>
 
 
 </div>
