--- a/seaBattle.html
+++ b/seaBattle.html
@@ -13,11 +13,32 @@
     <div class="playZones">
         <div class="zoneWithShips">
 
-
         </div>
         <div class="fields">
             <div class="field field1"></div>
             <div class="field field2"></div>
+        </div>
+
+        <div class="active-fields">
+            <div class="activeField-Player1">
+                <div class="field activeFieldPlayer1">
+
+                </div>
+                <div class="text-ownerField">
+<!--                    Field player1-->
+                </div>
+            </div>
+
+            <div class="activeField-Player2">
+                <div class="field activeFieldPlayer2">
+
+                </div>
+                <div class="text-ownerField">
+<!--                    Field player2-->
+                </div>
+            </div>
+
+
         </div>
     </div>
     <div class="btn-ready">
