--- a/seaBattle.html
+++ b/seaBattle.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="active-fields">
-            <div class="activeField-Player1">
+            <div class="activeField activeField-Player1">
                 <div class="field activeFieldPlayer1">
 
                 </div>
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="activeField-Player2">
+            <div class="activeField activeField-Player2">
                 <div class="field activeFieldPlayer2">
 
                 </div>
