--- a/seaBattle.html
+++ b/seaBattle.html
@@ -11,7 +11,13 @@
         <h1>Sea battle!</h1>
     </div>
     <div class="playZones">
-        <div class="zoneWithShips">
+        <div class="zoneShips">
+            <div class="text-onZone">
+                Drag onto the field and click to rotate:
+            </div>
+            <div class="zoneWithShips">
+        </div>
+
 
         </div>
         <div class="fields">
