--- a/seaBattle.html
+++ b/seaBattle.html
@@ -10,6 +10,12 @@
     <div class="hello-text">
         <h1>Sea battle!</h1>
     </div>
+
+    <div class="processGame-text">
+        <div class="text-whoTurn field1-text"></div>
+        <div class="text-whoTurn field2-text"></div>
+    </div>
+
     <div class="playZones">
         <div class="zoneShips">
             <div class="text-onZone">
@@ -53,6 +59,9 @@
     </div>
     <div class="btn-startGame">
         <button class="startGame" id="buttonStartGame" hidden>Start game</button>
+    </div>
+    <div class="btn-playAgain">
+        <button class="playAgain" id="playAgain" hidden>Play Again</button>
     </div>
 
 
